# ChangeLog for media-sound/ghostess
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Mar 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  ghostess-20120105.ebuild, metadata.xml:
  Removed jackmidi inherit
  Made repoman happy
  Added EAPI
  Use autotools-utils
  Removed no-herd from metadata.xml
  Clenup

  29 Jul 2012; Dominique Michel <dominique@tuxfamily.org>
  +ghostess-20120105.ebuild: version bump
  -ghostess-20081213.ebuild: removed non existing version
  -ghostess-20061117.ebuild: removed non existing version
  -ghostess-20060916.ebuild: removed non existing version

  11 Aug 2008; Frieder Buerzele <evermind@tuxfamily.org>;
  ghostess-20061127.ebuild, +files/ghostess-alsaseq-type.patch,
  +files/ghostess-jackmidi-nframes.patch:
  closes bug #51

  16 Dec 2007; Thomas Kuther <gimpel@sonnenkinder.org>
  ghostess-20050916.ebuild, ghostess-20061127.ebuild:
  added SLOT
