@@ -1,4 +1,4 @@
 DIST ghostess-20120105.tar.bz2 289346 SHA256 99c9006e6ccbec881b40eb5f20a9f8a72cecc3e437c6c164ff30ae5acd0bd08b SHA512 cc71a35b0a4319a06daac15b9602211d4c05185922215ba487356ad69c4e1df0ff04905c81176fe97ceef5f3504e4056bd598b8bfe38f6e170c4e273195e1150 WHIRLPOOL 9979915a070206e49af67fe1fb24d7454ef64dd236705d597eb8334d4975920386d4975497076cf6e9fdfc59b35fcab015c51926cdda33464f206ff386d66f1a
-EBUILD ghostess-20120105.ebuild 741 SHA256 d021e536e799aad223cd3cb9373fd26b005604d92e248b7dcffcf20e28f2594c SHA512 f0df686ba12450fbeb4f3bbaedff283123505c0c6840afb335382b86a85cee0c22e2bccc4c91c74e4008da645e219be1137c446e16bef45d759280653a0d3b44 WHIRLPOOL 35061ab54c67d39e5c127e0fc72ef2456447362ae88b24eee9ea52ba83f91b0d70168e3eeda011592756a9251d9f98285c4e226efcf7adc7337454df95cee1c4
-MISC ChangeLog 937 SHA256 fa60fa5d755c9911a5efadd5c0ed25f29a8a7b3c2119444456cb6d50aedba447 SHA512 3bb7dfd350f852290cc6549ede6900610aaa0656a290b6423fb67b831dc9127faaed3cab19a9ae87e6d571904804a8ae3f8b6d5f30c8413b9bc17539b6e17b36 WHIRLPOOL 5b7d13d6ba2ee904dff5c88db7243e762340eed3786589bc76679269a348363075347b528a07e4cf9e3c2578bbfa5fa9cffe449a938ad154888ca19583a15987
+EBUILD ghostess-20120105.ebuild 706 SHA256 143b27f25c4f00a883f9807ec6d11b9ce182a6bc89182e617d03445c6c37559f SHA512 6add559e553ea36f35328519a9d1cb2ba07640d82f1b92f8c94517d2793b9669ece043f68be900419c8f4844f49d95ff51241447716bafbf108485e5ce102cf5 WHIRLPOOL 92ac9e1c6d8df569802f53608af0c16d4f546f8bcebcc8fabb314d816d729a146be00b1161d3149f086e3fc6019c95454e51270ed43951011595d1b649eddd4f
+MISC ChangeLog 1113 SHA256 d2b701a2c2318122990368117d25dae3188542119786a2a7103cab81d11661f5 SHA512 80ad0805ed7383fc4d38bf83cd2a65dce5493b75cb62c907f78b3a783e5a749419ae65585d0b8cb2b03a380cbfe1446a61d442e7ca7cd7ab28cf04a3c977383d WHIRLPOOL 615c18a8c0dd377d292d5add0d98c0dad45c34c767e71966864e3c62f06b6bc26d09c9db3abc8d9ea14adb64fb825497d6679c7664e67c1ac189f5356a569ee4
 MISC metadata.xml 246 SHA256 f32f31abe9dcc1f9a5dc9b6a36996d773abd006d92c13c4df48f8d7d1061060f SHA512 327022589c637a14219eb603a62050fbb93b980f4693960c0ac4117b6b483d9f0d9fe1366d8e18227b34373a399aef339f49c16df8ca57b9ec870568a4d394f4 WHIRLPOOL e55381a9a9fd1d0efbe87da1c3aa302efdcf4734827f56273faeb55b17361c529518fcf16ac0946102e26165e8eedba81ab0cd07c7b08ce6bad001e944e43a0f
