@@ -1,4 +1,4 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
@@ -15,11 +15,11 @@ LICENSE="GPL-2"
 KEYWORDS="amd64 x86"
 SLOT="0"
 
-RDEPEND=">=media-libs/dssi-0.9.1
-	>=media-libs/liblo-0.18
-	>=media-libs/ladspa-sdk-1.0
-	>=x11-libs/gtk+-2.0
-	jack? ( >=media-sound/jack-audio-connection-kit-0.109.0 )"
+RDEPEND="media-libs/dssi
+	media-libs/liblo
+	media-libs/ladspa-sdk
+	x11-libs/gtk+:2
+	jack? ( media-sound/jack-audio-connection-kit )"
 DEPEND="${RDEPEND}
 	virtual/pkgconfig"
 
